[project]
name = "vnca"
version = "0.1.0"
description = "Re-implementation of Variational Neural Cellular Automata in JAX."
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "datasets>=4.0.0",
    "distrax>=0.1.5",
    "einops>=0.8.1",
    "equinox>=0.13.0",
    "ipykernel>=6.29.5",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "numpy>=2.1.3",
    "optax>=0.2.5",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.19.0",
    "tensorflow-probability>=0.25.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 170
skip-string-normalization = true
